templates/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-resolved.yaml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-resolved.yaml
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: web
    spec:
      containers:
        - env:
            - name: JICOFO_AUTH_USER
              value: focus
            - name: PUBLIC_URL
              value: http://jitsi.example.com
            - name: TZ
              value: UTC
            - name: XMPP_AUTH_DOMAIN
              value: auth.meet.jitsi
            - name: XMPP_BOSH_URL_BASE
              value: http://prosody:5280
            - name: XMPP_DOMAIN
              value: meet.jitsi
            - name: XMPP_GUEST_DOMAIN
              value: guest.meet.jitsi
            - name: XMPP_MUC_DOMAIN
              value: muc.meet.jitsi
            - name: XMPP_RECORDER_DOMAIN
              value: recorder.meet.jitsi
          image: jitsi/web:stable-4857
          name: web
          ports:
            - containerPort: 80
            - containerPort: 443
          resources: {}
      restartPolicy: Always
status: {}
